# KIWI-

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
gui/: README.md  package-lock.json  package.json  vite.config.ts
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
gui/src/components/: AudioResult.tsx  ConversionProgress.tsx  FileUpload.tsx  VoiceSettings.tsx
src/kiwi/: __init__.py  api.py  main.py  parsers.py  tts.py  utils.py
